--- a/index.html
+++ b/index.html
@@ -2,9 +2,27 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/images/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio Roi Eielts</title>
+
+    <!-- SEO Meta Tags -->
+    <meta name="description" content="Ontdek Roi's professionele portfolio met projecten, vaardigheden en ervaring op het gebied van webontwikkeling en ontwerp.">
+    <meta name="keywords" content="Roi, portfolio, software development, nederland, projecten, skills, ervaring">
+    <meta name="author" content="Roi">
+
+    <!-- Open Graph Meta Tags for Social Media -->
+    <meta property="og:title" content="Roi's Portfolio">
+    <meta property="og:description" content="Ontdek Roi's professionele portfolio met projecten, vaardigheden en ervaring op het gebied van webontwikkeling en ontwerp.">
+    <meta property="og:image" content="/images/logo.png">
+    <meta property="og:type" content="website">
+
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Roi's Portfolio">
+    <meta name="twitter:description" content="Ontdek Roi's professionele portfolio met projecten, vaardigheden en ervaring op het gebied van webontwikkeling en ontwerp.">
+    <meta name="twitter:image" content="/images/logo.png">
+    <meta name="twitter:creator" content="@https://x.com/Roieielts">
   </head>
   <body>
     <div id="root"></div>
