--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <!-- SEO Meta Tags -->
     <meta name="description" content="Ontdek Roi's professionele portfolio met projecten, vaardigheden en ervaring op het gebied van webontwikkeling en ontwerp.">
-    <meta name="keywords" content="Roi, portfolio, software development, nederland, projecten, skills, ervaring">
+    <meta name="keywords" content="Roi, portfolio, software development, nederland, projecten, skills, ervaring, software developer, programmeren, developer">
     <meta name="author" content="Roi">
 
     <!-- Open Graph Meta Tags for Social Media -->
